final UI updates

--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -82,7 +82,8 @@
 <h2><big><strong> Park Comments</strong></big></h2>
 <%= render @park.park_comments %>
 
-<h2 style="text-align:left">Add a park comment:</h2>
+<h3 style="text-align:left">Add a park comment:</h3>
+<h2 style="text-align:left">Tell us about what the park was like, its highlights or exciting features that you found!</h2>
 <%= render 'park_comments/form' %>
 
 
