--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,23 +1,30 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 
-<h1>UNDERLINED MEANS WE SHOULD HAVE A MEETING ON THIS</h1>
-
 <p>
-  <b>Project Name: Viewfinder</b><br>
-  Requirements and Specification Document <i>v.2018 Mar. 23rd</i>
+  <b><u>Project Name: Viewfinder</u></b><br>
+  Requirements and Specification Document <i>v.2018 Mar. 27th</i>
 </p>
 <p>
   <b>Project Abstract:</b><br>
-  Viewfinder is a web application for tourists, hikers, or just locals looking for a place to walk their dog. The application will provide information regarding parks and scenic views in Vancouver. Viewfinder will allow users to find a desirable park or view without undue hassle. Without an application, one would need to personally visit parks and collect their own data. Furthermore, our application will include information on which parks are safe to visit. The application will also include interaction with the google maps API, <u>photos of individual locations,</u> and general information about the particular park or view.
+  Viewfinder is a web application for tourists, hikers, or just locals looking for a place to walk their dog.
+  The application will provide information regarding parks and scenic views in Vancouver. Viewfinder will allow
+  users to find a desirable park or view without undue hassle. Without an application, one would need to personally
+  visit parks and collect their own data. Furthermore, our application will include information on which parks
+  are safe to visit. The application will also include interaction with the google maps API,
+  and general information about the particular park.
 </p>
 <p>
   <b>Customers:</b><br>
-  Viewfinder is a web application for tourists, hikers, locals looking for a place to walk their dog, or anyone in Vancouver interested in visiting a park or seeing a view.
+  Viewfinder is a web application for tourists, hikers, locals looking for a place to walk their dog,
+  or anyone in Vancouver interested in visiting a park or seeing a view.
 </p>
 <p>
   <b>Competitive Analysis:</b><br>
-  While park finding client-server applications do currently exist. These applications fail to provide information regarding the safety and cleanliness parks. Our application includes features that provide this information, along with the features that the competing applications provide such as <u>a distance filer, a rating system, interaction with the google maps API, photos, and general information about the particular park or view.</u>
+  While park finding client-server applications do currently exist. These applications fail
+  to provide information regarding the safety and cleanliness parks. Our application includes features
+  that provide this information, along with the features that the competing applications do not provide such as
+  interaction with the google maps API, microposts to allow users to share their personal opinions, and general information about park.
 </p>
 
 <p>
@@ -31,28 +38,40 @@
 %>
 <ul>
   <li><b>Unsignedup User:</b> Do not need to sign up. Able to quickly find useful information about the quality of parks and views that are close and accessible.</li>
-  <li><b>Signed In User:</b> Need to sign up, then signin to access further privileges. Able to easily and conveniently contribute ratings to parks and views in Vancouver as well as making microposts to their profile page.</li>
-  <li><b>Administrator:</b> Have permission to delete parks and users.</li>
+  <li><b>Signed In User:</b> Need to sign up, then signin to access further privileges. Able to make microposts to their profile page where other users can view them for their personal opinions .</li>
+  <li><b>Administrator:</b> Have permission to delete users.</li>
 </ul>
 
 <p>
   <b>Target Audience</b><br>
-  Viewfinder is a web application for tourists, hikers, locals looking for a place to walk their dog, or anyone in Vancouver interested in visiting a park or seeing a view.
+  Viewfinder is a web application for tourists, hikers, locals looking for a place to walk their dog,
+  or anyone in Vancouver interested in visiting a park or seeing a view.
 </p>
 
 <p>
   <b>Application Features:</b><br>
-  <u>  Viewfinder allows you to find out about the safety and cleanliness of the parks. Our application will include features that provide this information, along with the features that the competing applications provide such as a distance filer, a rating system, interaction with the google maps API, photos, and general information about the particular park or view.</u>
+      Viewfinder allows you to find out about the safety and cleanliness of the parks.
+      Our application will include features that provide this information, along with the features
+      that the competing applications provide such as interaction with the
+      google maps API, and general information about the particular park or view.
 </p>
 
 <p>
   <b>Application Utility:</b><br>
-  Viewfinder will greatly reduce the required time in finding a desirable park. Without it, one would need to personally visit parks and collect their own data. Our application will allow users to only visit the best parks, immediately, without experimenting with undesirable locations. Futhermore, our application will also keep users safe by providing information on which parks are safe to visit which is especially pertinent to users that plan on taking children.
+  Viewfinder will greatly reduce the required time in finding a desirable park.
+  Without it, one would need to personally visit parks and collect their own data.
+  Our application will allow users to only visit the best parks, immediately, without experimenting with undesirable locations.
+  Futhermore, our application will also keep users safe by providing information
+  on which parks are safe to visit which is especially pertinent to users that plan on taking children.
 </p>
 
 <p>
   <b>Scope and Responsibilities:</b><br>
-   The amount of work required for this project is appropriate for CMPT 276. Our team will have to program a model view controller interface, develop a user login, understand and employ HTTP methods for RESTful services. Furthermore we need to set up a server side database with ruby on rails, find and scrape some database with Vancouver Park information, then add to this scraped database, develop unit testing and possibly integration testing, understand and use byebug, prepare a presentation, and learn to develop with a git repository. The tools required to build this application are new to all of us.
+   The amount of work required for this project is appropriate for CMPT 276. Our team will have to program a model view
+    controller interface, develop a user login, understand and employ HTTP methods for RESTful services. Furthermore we need
+    to set up a server side database with ruby on rails, find and scrape some database with Vancouver Park information,
+    then add to this scraped database, develop unit testing and possibly integration testing, understand and use byebug, prepare
+    a presentation, and learn to develop with a git repository. The tools required to build this application are new to all of us.
 </p>
 <p>
   <a href="https://github.com/hwa95/Viewfinder">Github Link for ViewFinder</a>
