--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,7 +3,7 @@
 
 <h5 style="text-align:left">Team 6 is comprised of Alice Wang, Charlie Guan, Eric Huang, Hao Wu, Jesse Elliott, and Rui Xie.</h5>
 <p>
-  <b>Email:</b> eha35@sfu.ca
+  <b>Email:</b> ViewFinder@sfu.ca
 </p>
 <p>
    <b> In Person:</b> Every Thursday, 5:30PM to 8:20PM, SFU WMC 3260]
